4.x: Unit test lambdaification 16 of N