@@ -16,6 +16,7 @@ package io.reactivex.rxjava4.internal.operators.flowable;
 import static org.junit.Assert.*;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
@@ -43,7 +44,7 @@ public class FlowableSwitchIfEmptyTest extends RxJavaTest {
     @Test
     public void switchWhenEmpty() throws Exception {
         final Flowable<Integer> flowable = Flowable.<Integer>empty()
-                .switchIfEmpty(Flowable.fromIterable(Arrays.asList(42)));
+                .switchIfEmpty(Flowable.fromIterable(List.of(42)));
 
         assertEquals(42, flowable.blockingSingle().intValue());
     }
@@ -124,7 +125,7 @@ public class FlowableSwitchIfEmptyTest extends RxJavaTest {
 
         Flowable.<Integer>empty().switchIfEmpty(Flowable.just(1, 2, 3)).subscribe(ts);
 
-        assertEquals(Arrays.asList(1), ts.values());
+        assertEquals(List.of(1), ts.values());
         ts.assertNoErrors();
         ts.request(1);
         ts.assertValueCount(2);
