@@ -37,7 +37,7 @@ public class SingleTest extends RxJavaTest {
     public void helloWorld() {
         TestSubscriber<String> ts = new TestSubscriber<>();
         Single.just("Hello World!").toFlowable().subscribe(ts);
-        ts.assertValueSequence(Arrays.asList("Hello World!"));
+        ts.assertValueSequence(List.of("Hello World!"));
     }
 
     @Test
@@ -75,7 +75,7 @@ public class SingleTest extends RxJavaTest {
                     }
                 })
                 .toFlowable().subscribe(ts);
-        ts.assertValueSequence(Arrays.asList("AB"));
+        ts.assertValueSequence(List.of("AB"));
     }
 
     @Test
@@ -91,7 +91,7 @@ public class SingleTest extends RxJavaTest {
             }
         })
         .toFlowable().subscribe(ts);
-        ts.assertValueSequence(Arrays.asList("AB"));
+        ts.assertValueSequence(List.of("AB"));
     }
 
     @Test
@@ -105,7 +105,7 @@ public class SingleTest extends RxJavaTest {
             }
         })
         .toFlowable().subscribe(ts);
-        ts.assertValueSequence(Arrays.asList("AB"));
+        ts.assertValueSequence(List.of("AB"));
     }
 
     @Test
@@ -138,7 +138,7 @@ public class SingleTest extends RxJavaTest {
             }
         }).toFlowable().subscribe(ts);
 
-        ts.assertValueSequence(Arrays.asList("Hello"));
+        ts.assertValueSequence(List.of("Hello"));
     }
 
     @Test
@@ -178,7 +178,7 @@ public class SingleTest extends RxJavaTest {
                 })
                 .toFlowable().subscribe(ts);
         ts.awaitDone(5, TimeUnit.SECONDS);
-        ts.assertValueSequence(Arrays.asList("Hello"));
+        ts.assertValueSequence(List.of("Hello"));
     }
 
     @Test
@@ -195,7 +195,7 @@ public class SingleTest extends RxJavaTest {
             ts.cancel();
             Assert.fail("TestSubscriber timed out.");
         }
-        ts.assertValueSequence(Arrays.asList("Hello World!"));
+        ts.assertValueSequence(List.of("Hello World!"));
     }
 
     @Test
@@ -511,7 +511,7 @@ public class SingleTest extends RxJavaTest {
 
     @Test(expected = UnsupportedOperationException.class)
     public void toFlowableIterableRemove() {
-        Iterable<? extends Flowable<Integer>> f = SingleInternalHelper.iterableToFlowable(Arrays.asList(Single.just(1)));
+        Iterable<? extends Flowable<Integer>> f = SingleInternalHelper.iterableToFlowable(Collections.singletonList(Single.just(1)));
 
         Iterator<? extends Flowable<Integer>> iterator = f.iterator();
         iterator.next();
